# eth-library-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  README.de.md  README.md  SECURITY.de.md  SECURITY.md  TEST_PLAN.md  claude_desktop_config.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
audits/2026-05-28T142641-Z-eth-library-mcp/: applicability.json  audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-05-28T142641-Z-eth-library-mcp/findings/: ARCH-004.md  ARCH-005.md  ARCH-006.md  ARCH-012.md  CH-004.md  OBS-002.md  OBS-003.md  OBS-004.md  OPS-001.md  SCALE-002.md  SDK-001.md  SDK-002.md  SDK-003.md  SDK-004.md  SEC-003.md  SEC-005.md  SEC-007.md  SEC-013.md  SEC-016.md  SEC-021.md
audits/2026-05-28T184347-Z-eth-library-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/eth-library-mcp-profile/: profile.yaml
docs/: ARCHITECTURE.md  data-sources.md  network-egress.md  scope-minimization.md  secret-management.md
eth_library_mcp/: __init__.py  api_client.py  server.py
src/eth_library_mcp/: __init__.py  client.py  formatting.py  logging_config.py  server.py
tests/: __init__.py  test_server.py  test_tools.py
