[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eth-library-mcp"
version = "0.3.0"
description = "MCP Server für die ETH-Bibliothek Zürich – Zugriff auf 30+ Millionen Ressourcen via Discovery, Persons und Research Collection API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Schulamt der Stadt Zürich" }]
keywords = ["mcp", "eth", "library", "discovery", "research", "open-data"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
eth-library-mcp = "eth_library_mcp.server:main"

# BUG-01 BEHOBEN: src/-Präfix entfernt – kein src/-Verzeichnis vorhanden
[tool.hatch.build.targets.wheel]
packages = ["eth_library_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
